--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,8 @@
 body {
     background-color:white;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-body p, .mat-body-2 p, .mat-typography .mat-body p, .mat-typography .mat-body-2 p, .mat-typography p {
+    margin: 0 !important;
+}  
