--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,7 +1,7 @@
 
     <img class="w-64 h-32 object-cover rounded-t-md cursor-pointer hover:shadow-2xl hover:scale-105 transition-all transform duration-500" src="{{thumbnail}} " alt="" />
     <div class="mt-4">
-        <a [routerLink]="['product', productId]" class="text-2xl font-bold text-gray-700 line-clamp-1 cursor-pointer">{{title}}</a >
+        <a [routerLink]="['/product', productId]" class="text-2xl font-bold text-gray-700 line-clamp-1 cursor-pointer">{{title}}</a >
         <p class="text-sm mt-2 text-gray-700 line-clamp-2 cursor-pointer">{{description}}</p>
         <div class="mt-3 space-x-4 flex p-1 justify-between">
             <div
@@ -10,13 +10,13 @@
                     class="h-8 w-16 flex justify-center items-center text-center align-middle text-red-700">-{{discountPercentage}}
                     %</span>
             </div>
-            <div class="flex items-center">
+            <div class="flex items-center justify-center">
                 <svg class="w-4 h-4 text-yellow-300 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                     fill="currentColor" viewBox="0 0 22 20">
                     <path
                         d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z" />
                 </svg>
-                <p class="ms-2 text-sm font-bold text-gray-90">{{rating}}</p>
+                <p class="ms-2 text-sm font-bold text-gray-90 !important">{{rating}}</p>
             </div>
 
         </div>
