--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,83 +1,101 @@
 <nav class="fixed w-full z-20 top-0 start-0 border-b border-gray-200 bg-white shadow-lg">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+  <div class="max-w-screen-2xl m-auto flex flex-wrap items-center justify-between mx-auto p-4 gap-3">
+    <!-- Logo -->
     <a routerLink="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="../../assets/images/logo.jpg" class="h-8" alt="Flowbite Logo">
-      <span class="self-center text-2xl font-semibold whitespace-nowrap">E-Commerce</span>
+      <img src="../../assets/images/logoo.gif" class="h-8" alt="Flowbite Logo">
     </a>
-    <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-      <a routerLink="basket" type="button"
-        class="static text-white bg-purple-500 hover:bg-purple-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-20 h-10 text-center mr-4 px-2 flex items-center">
-        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-          width="24" height="24" fill="none" viewBox="0 0 24 24">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M9 10V6a3 3 0 0 1 3-3v0a3 3 0 0 1 3 3v4m3-2 .917 11.923A1 1 0 0 1 17.92 21H6.08a1 1 0 0 1-.997-1.077L6 8h12Z" />
+
+    <!-- Search Bar -->
+    <div class="hidden lg:flex justify-center items-center max-w-2xl w-full">
+      <input (keyup.enter)="search()" [(ngModel)]="searchKey" placeholder="Search" type="text" class="h-7 border w-full border-purple-700 hover:border-purple-400 outline-none rounded-md p-4 mr-2">
+      <button (click)="search()" class="bg-purple-600 text-white p-2 h-8 rounded-md flex justify-center items-center">Search</button>
+    </div>
+
+    <!-- Basket and User Menu -->
+    <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+      <a routerLink="basket" type="button" class="relative text-white bg-purple-500 hover:bg-purple-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-20 h-10 text-center mr-4 px-2 flex items-center">
+        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 10V6a3 3 0 0 1 3-3v0a3 3 0 0 1 3 3v4m3-2 .917 11.923A1 1 0 0 1 17.92 21H6.08a1 1 0 0 1-.997-1.077L6 8h12Z" />
         </svg>
         @if (basketProductAmount){
-        <div
-          class="w-3 h-3 text-xs bg-red-700 rounded-xl flex justify-center items-center absolute top-4 right-65 mt-5">
+        <div class="w-3 h-3 text-xs bg-red-700 rounded-xl flex justify-center items-center absolute top-0 right-65 mt-5">
           {{basketProductAmount}}</div>
         }
         Basket
       </a>
       @if(!authenticated){
-
-      <button type="button" routerLink="login"
-        class="text-white bg-purple-600 hover:bg-purple-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Log
-        In</button>
+      <button type="button" routerLink="login" class="text-white bg-purple-600 hover:bg-purple-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-2 w-20 h-10 text-center">Log In</button>
       }@else {
       <div class="group/item">
-        <div
-          class="flex justify-between gap-x-2 cursor-pointer  text-white bg-white border border-purple-500 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">
+        <div class="flex justify-between gap-x-2 cursor-pointer text-white bg-white border border-purple-500 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">
           <svg class="h-6 w-6 text-purple-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
           </svg>
           <p class="text-purple-700">Menu</p>
         </div>
-
-        <div
-          class="bg-white group/edit invisible group-hover/item:visible flex flex-col absolute justify-center gap-2 pl-2 w-full shadow-sm shadow-violet-200">
+        <div class="bg-white group/edit invisible group-hover/item:visible flex flex-col absolute justify-center gap-2 pl-2 w-full shadow-sm shadow-violet-200">
           <a href="" class="text-purple-700 hover:text-purple-900">My Profile</a>
           <a href="" class="text-purple-700 hover:text-purple-900">My Orders</a>
-          <a type="a" (click)="logOut()" class="text-purple-700 hover:text-purple-900 cursor-pointer">Log
-            Out</a>
-
+          <a type="a" (click)="logOut()" class="text-purple-700 hover:text-purple-900 cursor-pointer">Log Out</a>
         </div>
       </div>
-
-
       }
-      <button data-collapse-toggle="navbar-sticky" type="button"
-        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
-        aria-controls="navbar-sticky" aria-expanded="false">
+    </div>
+
+    <!-- Mobile Menu Icon -->
+    <div class="flex items-center lg:hidden order-last">
+      <button (click)="toggleMobileMenu()" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
         <span class="sr-only">Open main menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M1 1h15M1 7h15M1 13h15" />
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15" />
         </svg>
       </button>
     </div>
-    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-      <ul
-        class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white">
+
+    <!-- Desktop Menu -->
+    <div class="items-center justify-between hidden w-full lg:flex lg:w-auto lg:order-1" id="navbar-sticky">
+      <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white">
         <li>
-          <a routerLink="/" routerLinkActive="text-purple-700" [routerLinkActiveOptions]="{exact: true}"
-            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-purple-700 md:p-0"
-            aria-current="page">Home</a>
+          <a routerLink="/" routerLinkActive="text-purple-700" [routerLinkActiveOptions]="{exact: true}" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-purple-700 md:p-0" aria-current="page">Home</a>
         </li>
         <li>
-          <a routerLink="/products" href="#" routerLinkActive="text-purple-700"
-            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-purple-700 md:p-0">Products</a>
+          <a routerLink="/products" href="#" routerLinkActive="text-purple-700" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-purple-700 md:p-0">Products</a>
         </li>
         <li>
-          <a routerLink="/about" routerLinkActive="text-purple-700"
-            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-purple-700 md:p-0">About</a>
+          <a routerLink="/about" routerLinkActive="text-purple-700" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-purple-700 md:p-0">About</a>
         </li>
         <li>
-          <a routerLink="/contact" routerLinkActive="text-purple-700"
-            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-pink-700 md:p-0">Contact</a>
+          <a routerLink="/contact" routerLinkActive="text-purple-700" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-pink-700 md:p-0">Contact</a>
         </li>
       </ul>
     </div>
+
+    <!-- Mobile Menu -->
+    @if(showMobileMenu){
+      
+    <div class="fixed inset-0 z-50 flex lg:hidden order-last">
+      <div class="fixed inset-0 bg-black opacity-50" (click)="toggleMobileMenu()"></div>
+      <div class="relative bg-white w-full h-52 p-4 shadow-lg z-60">
+        <div class="flex justify-center items-center max-w-2xl w-full">
+          <input (keyup.enter)="search()" [(ngModel)]="searchKey" placeholder="Search" type="text" class="h-7 border w-full border-purple-700 hover:border-purple-400 outline-none rounded-md p-4 mr-2">
+          <button (click)="search()" class="bg-purple-600 text-white p-2 h-8 rounded-md flex justify-center items-center">Search</button>
+        </div>
+
+        <ul class="flex flex-col">
+          <li>
+            <a routerLink="/" routerLinkActive="text-purple-700" [routerLinkActiveOptions]="{exact: true}" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100">Home</a>
+          </li>
+          <li>
+            <a routerLink="/products" href="#" routerLinkActive="text-purple-700" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100">Products</a>
+          </li>
+          <li>
+            <a routerLink="/about" routerLinkActive="text-purple-700" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100">About</a>
+          </li>
+          <li>
+            <a routerLink="/contact" routerLinkActive="text-purple-700" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>}
   </div>
 </nav>
