--- a/src/app/pages/bsket/bsket.component.html
+++ b/src/app/pages/bsket/bsket.component.html
@@ -1,5 +1,5 @@
-<div class="bg-gray-100 h-screen py-8">
-    <div class="container mx-auto px-4">
+<div class="bg-gray-100 py-8">
+    <div class="container mt-24 sm:mt-0 mx-auto px-4">
         <h1 class="text-2xl font-semibold mb-4">Shopping Cart</h1>
         <div class="flex flex-col md:flex-row gap-4">
             <div class="md:w-3/4">
@@ -19,7 +19,7 @@
                                 <td class="py-4">
                                     <div class="flex items-center">
                                         <img src="{{product.thumbnail}} " class="h-16 w-16 mr-4" src="https://via.placeholder.com/150" alt="Product image">
-                                        <span class="font-semibold">{{product.title}}</span>
+                                        <span class="font-semibold hidden sm:block">{{product.title}}</span>
                                     </div>
                                 </td>
                                 <td class="py-4">{{product.price}} $</td>
