--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -1,5 +1,5 @@
-<div class="bg-gray-100 mt-10">
-    <div class="w-full max-w-3xl mx-auto p-8">
+<div class="bg-gray-100 mt-24 sm:mt-10">
+    <div class="w-full max-w-2xl mx-auto p-8">
         <div class="bg-white p-8 rounded-lg shadow-md border">
             <h1 class="text-2xl font-bold text-gray-800 mb-4">Checkout</h1>
 
@@ -108,7 +108,7 @@
                                     <div class="flex items-center">
                                         <img src="{{productData.thumbnail}} " class="h-16 w-16 mr-4"
                                             src="https://via.placeholder.com/150" alt="Product image">
-                                        <span class="font-semibold">{{productData.title}}</span>
+                                        <span class="font-semibold hidden sm:block">{{productData.title}}</span>
                                     </div>
                                 </td>
                                 <td class="py-4">{{productData.price}} $</td>
@@ -131,7 +131,7 @@
                                 <div class="flex items-center">
                                     <img src="{{product.thumbnail}} " class="h-16 w-16 mr-4"
                                         src="https://via.placeholder.com/150" alt="Product image">
-                                    <span class="font-semibold">{{product.title}}</span>
+                                    <span class="font-semibold hidden sm:block">{{product.title}}</span>
                                 </div>
                             </td>
                             <td class="py-4">{{product.price}} $</td>
@@ -153,4 +153,11 @@
         </div>
     </div>
 
+</div>
+
+<div *ngIf="showSuccessMessage" class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50">
+    <div class="bg-white p-6 rounded shadow-md text-center">
+        <h2 class="text-2xl mb-4">Order Placed Successfully!</h2>
+        <button (click)="closeSuccessMessage()" class="px-4 py-2 bg-purple-500 text-white rounded">Close</button>
+    </div>
 </div>
