--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,16 +7,16 @@
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
         <form class="space-y-6" action="#" method="POST" (ngSubmit)="login()" #loginForm="ngForm">
             <div>
-                <label for="email" class="block mb-2 text-sm font-medium text-white">Email address</label>
+                <label for="username" class="block mb-2 text-sm font-medium text-purple-700">User Name</label>
                 <div class="mt-2">
-                    <input id="email" name="email" type="email" autocomplete="email" required [(ngModel)]="email"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5">
+                    <input id="username" name="username" type="username" autocomplete="username" required [(ngModel)]="username"
+                    class="bg-gray-50 border border-purple-500 text-gray-900 text-sm rounded-lg focus:ring-purple-700 focus:border-purple-700 block w-full p-2.5">
                 </div>
             </div>
 
             <div>
                 <div class="flex items-center justify-between">
-                    <label for="password" class="block mb-2 text-sm font-medium text-white">Password</label>
+                    <label for="password" class="block mb-2 text-sm font-medium text-purple-700">Password</label>
                     <div class="text-sm">
                         <a href="#" class="font-semibold text-purple-600 hover:text-purple-500">Forgot password?</a>
                     </div>
@@ -24,7 +24,7 @@
                 <div class="mt-2">
                     <input id="password" name="password" type="password" autocomplete="current-password" required
                         [(ngModel)]="password"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5">
+                        class="bg-gray-50 border border-purple-500 text-gray-900 text-sm rounded-lg focus:ring-purple-700 focus:border-purple-700 block w-full p-2.5">
                 </div>
             </div>
 
