--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
 
-    <img class="w-64 h-32 object-cover rounded-t-md cursor-pointer hover:shadow-2xl hover:scale-105 transition-all transform duration-500" src="{{thumbnail}} " alt="" />
+    <img class="w-64 h-44 object-center rounded-t-md cursor-pointer hover:shadow-2xl hover:scale-105 transition-all transform duration-500" src="{{thumbnail}} " alt="" />
     <div class="mt-4">
         <a [routerLink]="['/product', productId]" class="text-2xl font-bold text-gray-700 line-clamp-1 cursor-pointer">{{title}}</a >
         <p class="text-sm mt-2 text-gray-700 line-clamp-2 cursor-pointer">{{description}}</p>
