--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="mt-20 xl:mt-32 mx-auto w-full relative text-center bg-purple-600 text-white">
-    <div class="px-2 py-4 md:py-14 xl:pt-1 xl:pb-6">
+<div class="mt-5 xl:mt-32 mx-auto w-full relative text-center bg-purple-600 text-white">
+    <div class="px-2 py-4 md:py-14 xl:pt-1">
         <a class="mt-8 xl:mt-12 px-6 py-2 text-lg font-medium leading-tight inline-block bg-purple-800 rounded-full shadow-xl border border-transparent hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-sky-999 focus:ring-purple-500"
             href="#">Get
             started</a>
@@ -11,7 +11,7 @@
                 <div class="px-5 py-2"><a routerLink="/terms">Terms</a></div>
                 <div class="px-5 py-2"><a routerLink="/about">About</a></div>
             </nav>
-            <p class="mt-7 text-base">© 2023 XYZ, LLC</p>
+            <p class="mt-7 text-base">© 2024 XYZ, LLC</p>
         </div>
     </div>
-</footer>
+</div>
