--- a/src/app/pages/bsket/bsket.component.html
+++ b/src/app/pages/bsket/bsket.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 py-8">
+<div class="py-8 mb-44">
     <div class="container mt-24 sm:mt-0 mx-auto px-4">
         <h1 class="text-2xl font-semibold mb-4">Shopping Cart</h1>
         <div class="flex flex-col md:flex-row gap-4">
