--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-2 md:px-4 mt-32">
+<div class="container mx-auto px-2 md:px-4 mt-32 max-h-screen h-full">
     <section class="mb-32">
       <div class="flex justify-center">
         <div class="text-center md:max-w-xl lg:max-w-3xl">
