--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
                 class="text-xl text-purple-700 hover:text-purple-500 cursor-pointer">See All</a>
         </div>
         <div
-            class=" bg-gray-100 items-center w-auto grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mt-10 mb-5">
+            class="items-center w-auto grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mt-10 mb-5">
             @for (productOfCategory of section[key].products; track productOfCategory.id) {
             <div class="w-72 p-6 bg-white rounded-xl shadow-xl">
 
