--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-  <section class="bg-gray-100">
+  <section>
     <div class="container mx-auto py-16 px-4 sm:px-6 lg:px-8">
       <div class="grid grid-cols-1 md:grid-cols-2 items-center gap-8">
         <div class="max-w-lg">
