--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 mt-24 sm:mt-10">
+<div class="mt-24 sm:mt-10">
     <div class="w-full max-w-2xl mx-auto p-8">
         <div class="bg-white p-8 rounded-lg shadow-md border">
             <h1 class="text-2xl font-bold text-gray-800 mb-4">Checkout</h1>
