--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,5 +1,5 @@
 @if(productData){
-<div class="bg-gray-100 py-8 mt-24">
+<div class="py-8 mt-24">
     <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex flex-col md:flex-row -mx-4">
             <div class="md:flex-1 px-4">
@@ -35,7 +35,7 @@
                     </div>
                     <div class="w-1/2 px-2">
                         <button
-                            class="w-full bg-gray-200 text-purple-700 py-2 px-4 rounded-full font-bold hover:bg-purple-300" (click)="buyNow()">Buy</button>
+                            class="w-full text-purple-700 py-2 px-4 rounded-full font-bold hover:bg-purple-300" (click)="buyNow()">Buy</button>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                 Are Saying</h2>
             <div class="flex flex-col space-y-4 md:space-y-0 md:flex-row md:space-x-4 relative">
                 @for (review of productReviews; track review.id) {
-                <div class="bg-gray-200 rounded-lg p-8 text-center md:w-1/3">
+                <div class="rounded-lg p-8 text-center md:w-1/3">
                     <p class="font-bold uppercase">{{review.reviewerName}}</p>
                     <p class="text-xl font-light italic text-gray-700">{{review.comment}}</p>
                     <div class="flex items-center justify-center space-x-2 mt-4">
