--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="lg:hidden p-2 h-14 mt-44 sm:mt-16">
+<div class="lg:hidden p-2 h-14 mt-32 sm:mt-16">
     <button (click)="toggleCategories()"
         class="text-purple-700 bg-white border border-purple-500 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-purple-500">
         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -42,7 +42,7 @@
 
 
     <div
-        class=" bg-gray-100 lg:w-5/6 md:w-3/4 w-4/5 grid grid-cols-1 xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-2 justify-items-center justify-between gap-y-20 mt-10 mb-5">
+        class="lg:w-5/6 md:w-3/4 w-4/5 grid grid-cols-1 xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-2 justify-items-center justify-between gap-y-20 mt-10 mb-5">
         @for (productOfCategory of productByCategory; track productOfCategory.id) {
         <div class="w-72 p-6 bg-white rounded-xl shadow-xl">
 
