--- a/src/app/pages/search-result/search-result.component.html
+++ b/src/app/pages/search-result/search-result.component.html
@@ -2,7 +2,7 @@
 @if(resultProducts?.length) {
 
 <div
-    class=" bg-gray-100 w-auto grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mt-10 mb-5">
+    class="w-auto grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mt-10 mb-5">
     @for (product of resultProducts; track product.id) {
     <div class="w-72 p-6 bg-white rounded-xl shadow-xl">
 
